# Spy_Cat_Agency

./: .gitignore  README.md  SCA.postman_collection.json  pyproject.toml  requirements.txt
spy_cat_agency/spy_cat_agency/: settings.py  urls.py
spy_cat_agency/spycat/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
spy_cat_agency/spycat/migrations/: 0001_initial.py
